build/parser.output
State 20 conflicts: 1 shift/reduce
State 115 conflicts: 13 shift/reduce
State 122 conflicts: 13 shift/reduce
State 123 conflicts: 13 shift/reduce
State 176 conflicts: 18 shift/reduce
State 177 conflicts: 18 shift/reduce
State 178 conflicts: 18 shift/reduce
State 179 conflicts: 18 shift/reduce
State 180 conflicts: 18 shift/reduce
State 181 conflicts: 18 shift/reduce
State 182 conflicts: 18 shift/reduce
State 183 conflicts: 18 shift/reduce
State 184 conflicts: 13 shift/reduce
State 185 conflicts: 13 shift/reduce
State 186 conflicts: 13 shift/reduce
State 187 conflicts: 13 shift/reduce
State 188 conflicts: 13 shift/reduce
State 189 conflicts: 18 shift/reduce
State 190 conflicts: 18 shift/reduce
State 191 conflicts: 18 shift/reduce
State 192 conflicts: 18 shift/reduce
State 193 conflicts: 18 shift/reduce
State 221 conflicts: 18 shift/reduce
State 222 conflicts: 18 shift/reduce
State 223 conflicts: 18 shift/reduce
State 224 conflicts: 18 shift/reduce
State 225 conflicts: 18 shift/reduce
State 253 conflicts: 1 shift/reduce


Grammar

    0 $accept: s $end

    1 s: lSentencia
    2  | s error ';'

    3 lSentencia: lSentencia sentencia ';'
    4           | sentencia ';'
    5           | lSentencia bloque
    6           | bloque
    7           | lSentencia sentencia_if
    8           | sentencia_if
    9           | lSentencia sentencia_switch
   10           | sentencia_switch
   11           | lSentencia sentencia_while
   12           | sentencia_while
   13           | lSentencia sentencia_for
   14           | sentencia_for
   15           | lSentencia error ';'

   16 sentencia: imprimir
   17          | bloque
   18          | declaracion_var
   19          | declaracion_const
   20          | declaracion_array
   21          | declaracion_matrix
   22          | asignacion
   23          | sentencia_funcion
   24          | TOKEN_IDENTIFIER '(' lista_Expr ')'
   25          | TOKEN_IDENTIFIER '(' ')'
   26          | TOKEN_BREAK
   27          | TOKEN_CONTINUE
   28          | TOKEN_RETURN
   29          | TOKEN_RETURN expr

   30 lista_Expr: lista_Expr ',' expr
   31           | expr

   32 imprimir: TOKEN_PRINT '(' lista_Expr ')'

   33 bloque: '{' lSentencia '}'

   34 declaracion_var: tipoPrimitivo TOKEN_IDENTIFIER
   35                | tipoPrimitivo TOKEN_IDENTIFIER '=' expr

   36 declaracion_const: TOKEN_FINAL tipoPrimitivo TOKEN_IDENTIFIER '=' expr

   37 asignacion: TOKEN_IDENTIFIER '=' expr
   38           | TOKEN_IDENTIFIER '[' expr ']' '=' expr
   39           | TOKEN_IDENTIFIER '[' expr ']' '[' expr ']' '=' expr
   40           | TOKEN_IDENTIFIER TOKEN_PLUS_ASSIGN expr
   41           | TOKEN_IDENTIFIER TOKEN_MINUS_ASSIGN expr
   42           | TOKEN_IDENTIFIER TOKEN_MULT_ASSIGN expr
   43           | TOKEN_IDENTIFIER TOKEN_DIV_ASSIGN expr
   44           | TOKEN_IDENTIFIER TOKEN_MOD_ASSIGN expr
   45           | TOKEN_IDENTIFIER TOKEN_AND_ASSIGN expr
   46           | TOKEN_IDENTIFIER TOKEN_OR_ASSIGN expr
   47           | TOKEN_IDENTIFIER TOKEN_XOR_ASSIGN expr
   48           | TOKEN_IDENTIFIER TOKEN_LSHIFT_ASSIGN expr
   49           | TOKEN_IDENTIFIER TOKEN_RSHIFT_ASSIGN expr

   50 sentencia_if: TOKEN_IF '(' expr ')' bloque
   51             | TOKEN_IF '(' expr ')' bloque TOKEN_ELSE bloque
   52             | TOKEN_IF '(' expr ')' bloque TOKEN_ELSE sentencia_if

   53 lista_parametros: lista_parametros ',' declaracion_var
   54                 | declaracion_var

   55 sentencia_funcion: tipoPrimitivo TOKEN_FUNC TOKEN_IDENTIFIER '(' lista_parametros ')' bloque
   56                  | tipoPrimitivo TOKEN_FUNC TOKEN_IDENTIFIER '(' ')' bloque
   57                  | tipoPrimitivo TOKEN_IDENTIFIER '(' lista_parametros ')' bloque
   58                  | tipoPrimitivo TOKEN_IDENTIFIER '(' ')' bloque

   59 sentencia_switch: TOKEN_SWITCH '(' expr ')' '{' lista_casos '}'

   60 lista_casos: lista_casos caso
   61            | caso

   62 caso: TOKEN_CASE expr ':' lSentencia
   63     | TOKEN_DEFAULT ':' lSentencia

   64 sentencia_while: TOKEN_WHILE '(' expr ')' bloque

   65 sentencia_for: TOKEN_FOR '(' declaracion_var ';' expr ';' asignacion ')' bloque
   66              | TOKEN_FOR '(' declaracion_var ';' expr ';' ')' bloque
   67              | TOKEN_FOR '(' ';' expr ';' asignacion ')' bloque
   68              | TOKEN_FOR '(' ';' expr ';' ')' bloque
   69              | TOKEN_FOR '(' tipoPrimitivo TOKEN_IDENTIFIER ':' expr ')' bloque

   70 expr: expr '+' expr
   71     | expr '-' expr
   72     | expr '*' expr
   73     | expr '/' expr
   74     | expr '%' expr
   75     | expr '&' expr
   76     | expr '|' expr
   77     | expr '^' expr
   78     | expr TOKEN_LEFT_SHIFT expr
   79     | expr TOKEN_RIGHT_SHIFT expr
   80     | '(' expr ')'
   81     | '-' expr
   82     | '~' expr
   83     | expr TOKEN_EQ expr
   84     | expr TOKEN_NE expr
   85     | expr '>' expr
   86     | expr '<' expr
   87     | expr TOKEN_GE expr
   88     | expr TOKEN_LE expr
   89     | expr TOKEN_AND expr
   90     | expr TOKEN_OR expr
   91     | '!' expr
   92     | '(' TOKEN_DVOID ')' expr
   93     | '(' TOKEN_DINT ')' expr
   94     | '(' TOKEN_DFLOAT ')' expr
   95     | '(' TOKEN_DDOUBLE ')' expr
   96     | '(' TOKEN_DCHAR ')' expr
   97     | primitivo
   98     | TOKEN_IDENTIFIER
   99     | TOKEN_IDENTIFIER '(' lista_Expr ')'
  100     | TOKEN_IDENTIFIER '(' ')'
  101     | TOKEN_INTEGER '.' TOKEN_IDENTIFIER '(' expr ')'
  102     | TOKEN_DOUBLE_CLASS '.' TOKEN_IDENTIFIER '(' expr ')'
  103     | TOKEN_FLOAT_CLASS '.' TOKEN_IDENTIFIER '(' expr ')'
  104     | TOKEN_STRING_CLASS '.' TOKEN_IDENTIFIER '(' expr ')'
  105     | TOKEN_STRING_CLASS '.' TOKEN_IDENTIFIER '(' lista_Expr ')'
  106     | acceso_array
  107     | acceso_matrix

  108 primitivo: TOKEN_UNSIGNED_INTEGER
  109          | TOKEN_STRING
  110          | TOKEN_REAL
  111          | TOKEN_DOUBLE
  112          | TOKEN_CHAR
  113          | TOKEN_TRUE
  114          | TOKEN_FALSE

  115 tipoPrimitivo: TOKEN_DVOID
  116              | TOKEN_DINT
  117              | TOKEN_DFLOAT
  118              | TOKEN_DDOUBLE
  119              | TOKEN_STRING_CLASS
  120              | TOKEN_DBOOLEAN
  121              | TOKEN_DCHAR

  122 tipoArray: tipoPrimitivo '[' ']'

  123 declaracion_array: tipoArray TOKEN_IDENTIFIER '=' TOKEN_NEW tipoPrimitivo '[' expr ']'
  124                  | tipoArray TOKEN_IDENTIFIER '=' '{' lista_elementos '}'

  125 lista_elementos: lista_elementos ',' expr
  126                | expr

  127 acceso_array: TOKEN_IDENTIFIER '[' expr ']'

  128 tipoMatrix: tipoPrimitivo '[' ']' '[' ']'

  129 declaracion_matrix: tipoMatrix TOKEN_IDENTIFIER '=' TOKEN_NEW tipoPrimitivo '[' expr ']' '[' expr ']'
  130                   | tipoMatrix TOKEN_IDENTIFIER '=' '{' lista_filas '}'

  131 lista_filas: lista_filas ',' lista_fila
  132            | lista_fila

  133 lista_fila: '{' lista_elementos '}'

  134 acceso_matrix: TOKEN_IDENTIFIER '[' expr ']' '[' expr ']'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 91
    '%' (37) 74
    '&' (38) 75
    '(' (40) 24 25 32 50 51 52 55 56 57 58 59 64 65 66 67 68 69 80 92 93 94 95 96 99 100 101 102 103 104 105
    ')' (41) 24 25 32 50 51 52 55 56 57 58 59 64 65 66 67 68 69 80 92 93 94 95 96 99 100 101 102 103 104 105
    '*' (42) 72
    '+' (43) 70
    ',' (44) 30 53 125 131
    '-' (45) 71 81
    '.' (46) 101 102 103 104 105
    '/' (47) 73
    ':' (58) 62 63 69
    ';' (59) 2 3 4 15 65 66 67 68
    '<' (60) 86
    '=' (61) 35 36 37 38 39 123 124 129 130
    '>' (62) 85
    '[' (91) 38 39 122 123 127 128 129 134
    ']' (93) 38 39 122 123 127 128 129 134
    '^' (94) 77
    '{' (123) 33 59 124 130 133
    '|' (124) 76
    '}' (125) 33 59 124 130 133
    '~' (126) 82
    error (256) 2 15
    TOKEN_PRINT <string> (258) 32
    TOKEN_DINT <string> (259) 93 116
    TOKEN_DFLOAT <string> (260) 94 117
    TOKEN_DDOUBLE <string> (261) 95 118
    TOKEN_DVOID <string> (262) 92 115
    TOKEN_IF <string> (263) 50 51 52
    TOKEN_ELSE <string> (264) 51 52
    TOKEN_TRUE <string> (265) 113
    TOKEN_FALSE <string> (266) 114
    TOKEN_FUNC <string> (267) 55 56
    TOKEN_INTEGER <string> (268) 101
    TOKEN_DOUBLE_CLASS <string> (269) 102
    TOKEN_FLOAT_CLASS <string> (270) 103
    TOKEN_STRING_CLASS <string> (271) 104 105 119
    TOKEN_DBOOLEAN <string> (272) 120
    TOKEN_DCHAR <string> (273) 96 121
    TOKEN_UNSIGNED_INTEGER <string> (274) 108
    TOKEN_REAL <string> (275) 110
    TOKEN_DOUBLE <string> (276) 111
    TOKEN_STRING <string> (277) 109
    TOKEN_CHAR <string> (278) 112
    TOKEN_IDENTIFIER <string> (279) 24 25 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 55 56 57 58 69 98 99 100 101 102 103 104 105 123 124 127 129 130 134
    TOKEN_RETURN <string> (280) 28 29
    TOKEN_FINAL <string> (281) 36
    TOKEN_LEFT_SHIFT <string> (282) 78
    TOKEN_RIGHT_SHIFT <string> (283) 79
    TOKEN_EQ <string> (284) 83
    TOKEN_NE <string> (285) 84
    TOKEN_GE <string> (286) 87
    TOKEN_LE <string> (287) 88
    TOKEN_AND <string> (288) 89
    TOKEN_OR <string> (289) 90
    TOKEN_PLUS_ASSIGN <string> (290) 40
    TOKEN_MINUS_ASSIGN <string> (291) 41
    TOKEN_MULT_ASSIGN <string> (292) 42
    TOKEN_DIV_ASSIGN <string> (293) 43
    TOKEN_MOD_ASSIGN <string> (294) 44
    TOKEN_AND_ASSIGN <string> (295) 45
    TOKEN_OR_ASSIGN <string> (296) 46
    TOKEN_XOR_ASSIGN <string> (297) 47
    TOKEN_LSHIFT_ASSIGN <string> (298) 48
    TOKEN_RSHIFT_ASSIGN <string> (299) 49
    TOKEN_SWITCH <string> (300) 59
    TOKEN_CASE <string> (301) 62
    TOKEN_BREAK <string> (302) 26
    TOKEN_DEFAULT <string> (303) 63
    TOKEN_WHILE <string> (304) 64
    TOKEN_CONTINUE <string> (305) 27
    TOKEN_FOR <string> (306) 65 66 67 68 69
    TOKEN_NEW <string> (307) 123 129
    NEG (308)


Nonterminals, with rules where they appear

    $accept (77)
        on left: 0
    s <nodo> (78)
        on left: 1 2
        on right: 0 2
    lSentencia <nodo> (79)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15
        on right: 1 3 5 7 9 11 13 15 33 62 63
    sentencia <nodo> (80)
        on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29
        on right: 3 4
    lista_Expr <nodo> (81)
        on left: 30 31
        on right: 24 30 32 99 105
    imprimir <nodo> (82)
        on left: 32
        on right: 16
    bloque <nodo> (83)
        on left: 33
        on right: 5 6 17 50 51 52 55 56 57 58 64 65 66 67 68 69
    declaracion_var <nodo> (84)
        on left: 34 35
        on right: 18 53 54 65 66
    declaracion_const <nodo> (85)
        on left: 36
        on right: 19
    asignacion <nodo> (86)
        on left: 37 38 39 40 41 42 43 44 45 46 47 48 49
        on right: 22 65 67
    sentencia_if <nodo> (87)
        on left: 50 51 52
        on right: 7 8 52
    lista_parametros <nodo> (88)
        on left: 53 54
        on right: 53 55 57
    sentencia_funcion <nodo> (89)
        on left: 55 56 57 58
        on right: 23
    sentencia_switch <nodo> (90)
        on left: 59
        on right: 9 10
    lista_casos <nodo> (91)
        on left: 60 61
        on right: 59 60
    caso <nodo> (92)
        on left: 62 63
        on right: 60 61
    sentencia_while <nodo> (93)
        on left: 64
        on right: 11 12
    sentencia_for <nodo> (94)
        on left: 65 66 67 68 69
        on right: 13 14
    expr <nodo> (95)
        on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107
        on right: 29 30 31 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 59 62 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 101 102 103 104 123 125 126 127 129 134
    primitivo <nodo> (96)
        on left: 108 109 110 111 112 113 114
        on right: 97
    tipoPrimitivo <tipoDato> (97)
        on left: 115 116 117 118 119 120 121
        on right: 34 35 36 55 56 57 58 69 122 123 128 129
    tipoArray <tipoDato> (98)
        on left: 122
        on right: 123 124
    declaracion_array <nodo> (99)
        on left: 123 124
        on right: 20
    lista_elementos <nodo> (100)
        on left: 125 126
        on right: 124 125 133
    acceso_array <nodo> (101)
        on left: 127
        on right: 106
    tipoMatrix <tipoDato> (102)
        on left: 128
        on right: 129 130
    declaracion_matrix <nodo> (103)
        on left: 129 130
        on right: 21
    lista_filas <nodo> (104)
        on left: 131 132
        on right: 130 131
    lista_fila <nodo> (105)
        on left: 133
        on right: 131 132
    acceso_matrix <nodo> (106)
        on left: 134
        on right: 107


State 0

    0 $accept: • s $end

    TOKEN_PRINT         shift, and go to state 1
    TOKEN_DINT          shift, and go to state 2
    TOKEN_DFLOAT        shift, and go to state 3
    TOKEN_DDOUBLE       shift, and go to state 4
    TOKEN_DVOID         shift, and go to state 5
    TOKEN_IF            shift, and go to state 6
    TOKEN_STRING_CLASS  shift, and go to state 7
    TOKEN_DBOOLEAN      shift, and go to state 8
    TOKEN_DCHAR         shift, and go to state 9
    TOKEN_IDENTIFIER    shift, and go to state 10
    TOKEN_RETURN        shift, and go to state 11
    TOKEN_FINAL         shift, and go to state 12
    TOKEN_SWITCH        shift, and go to state 13
    TOKEN_BREAK         shift, and go to state 14
    TOKEN_WHILE         shift, and go to state 15
    TOKEN_CONTINUE      shift, and go to state 16
    TOKEN_FOR           shift, and go to state 17
    '{'                 shift, and go to state 18

    s                   go to state 19
    lSentencia          go to state 20
    sentencia           go to state 21
    imprimir            go to state 22
    bloque              go to state 23
    declaracion_var     go to state 24
    declaracion_const   go to state 25
    asignacion          go to state 26
    sentencia_if        go to state 27
    sentencia_funcion   go to state 28
    sentencia_switch    go to state 29
    sentencia_while     go to state 30
    sentencia_for       go to state 31
    tipoPrimitivo       go to state 32
    tipoArray           go to state 33
    declaracion_array   go to state 34
    tipoMatrix          go to state 35
    declaracion_matrix  go to state 36


State 1

   32 imprimir: TOKEN_PRINT • '(' lista_Expr ')'

    '('  shift, and go to state 37


State 2

  116 tipoPrimitivo: TOKEN_DINT •

    $default  reduce using rule 116 (tipoPrimitivo)


State 3

  117 tipoPrimitivo: TOKEN_DFLOAT •

    $default  reduce using rule 117 (tipoPrimitivo)


State 4

  118 tipoPrimitivo: TOKEN_DDOUBLE •

    $default  reduce using rule 118 (tipoPrimitivo)


State 5

  115 tipoPrimitivo: TOKEN_DVOID •

    $default  reduce using rule 115 (tipoPrimitivo)


State 6

   50 sentencia_if: TOKEN_IF • '(' expr ')' bloque
   51             | TOKEN_IF • '(' expr ')' bloque TOKEN_ELSE bloque
   52             | TOKEN_IF • '(' expr ')' bloque TOKEN_ELSE sentencia_if

    '('  shift, and go to state 38


State 7

  119 tipoPrimitivo: TOKEN_STRING_CLASS •

    $default  reduce using rule 119 (tipoPrimitivo)


State 8

  120 tipoPrimitivo: TOKEN_DBOOLEAN •

    $default  reduce using rule 120 (tipoPrimitivo)


State 9

  121 tipoPrimitivo: TOKEN_DCHAR •

    $default  reduce using rule 121 (tipoPrimitivo)


State 10

   24 sentencia: TOKEN_IDENTIFIER • '(' lista_Expr ')'
   25          | TOKEN_IDENTIFIER • '(' ')'
   37 asignacion: TOKEN_IDENTIFIER • '=' expr
   38           | TOKEN_IDENTIFIER • '[' expr ']' '=' expr
   39           | TOKEN_IDENTIFIER • '[' expr ']' '[' expr ']' '=' expr
   40           | TOKEN_IDENTIFIER • TOKEN_PLUS_ASSIGN expr
   41           | TOKEN_IDENTIFIER • TOKEN_MINUS_ASSIGN expr
   42           | TOKEN_IDENTIFIER • TOKEN_MULT_ASSIGN expr
   43           | TOKEN_IDENTIFIER • TOKEN_DIV_ASSIGN expr
   44           | TOKEN_IDENTIFIER • TOKEN_MOD_ASSIGN expr
   45           | TOKEN_IDENTIFIER • TOKEN_AND_ASSIGN expr
   46           | TOKEN_IDENTIFIER • TOKEN_OR_ASSIGN expr
   47           | TOKEN_IDENTIFIER • TOKEN_XOR_ASSIGN expr
   48           | TOKEN_IDENTIFIER • TOKEN_LSHIFT_ASSIGN expr
   49           | TOKEN_IDENTIFIER • TOKEN_RSHIFT_ASSIGN expr

    TOKEN_PLUS_ASSIGN    shift, and go to state 39
    TOKEN_MINUS_ASSIGN   shift, and go to state 40
    TOKEN_MULT_ASSIGN    shift, and go to state 41
    TOKEN_DIV_ASSIGN     shift, and go to state 42
    TOKEN_MOD_ASSIGN     shift, and go to state 43
    TOKEN_AND_ASSIGN     shift, and go to state 44
    TOKEN_OR_ASSIGN      shift, and go to state 45
    TOKEN_XOR_ASSIGN     shift, and go to state 46
    TOKEN_LSHIFT_ASSIGN  shift, and go to state 47
    TOKEN_RSHIFT_ASSIGN  shift, and go to state 48
    '('                  shift, and go to state 49
    '='                  shift, and go to state 50
    '['                  shift, and go to state 51


State 11

   28 sentencia: TOKEN_RETURN •
   29          | TOKEN_RETURN • expr

    TOKEN_TRUE              shift, and go to state 52
    TOKEN_FALSE             shift, and go to state 53
    TOKEN_INTEGER           shift, and go to state 54
    TOKEN_DOUBLE_CLASS      shift, and go to state 55
    TOKEN_FLOAT_CLASS       shift, and go to state 56
    TOKEN_STRING_CLASS      shift, and go to state 57
    TOKEN_UNSIGNED_INTEGER  shift, and go to state 58
    TOKEN_REAL              shift, and go to state 59
    TOKEN_DOUBLE            shift, and go to state 60
    TOKEN_STRING            shift, and go to state 61
    TOKEN_CHAR              shift, and go to state 62
    TOKEN_IDENTIFIER        shift, and go to state 63
    '-'                     shift, and go to state 64
    '('                     shift, and go to state 65
    '~'                     shift, and go to state 66
    '!'                     shift, and go to state 67

    $default  reduce using rule 28 (sentencia)

    expr           go to state 68
    primitivo      go to state 69
    acceso_array   go to state 70
    acceso_matrix  go to state 71


State 12

   36 declaracion_const: TOKEN_FINAL • tipoPrimitivo TOKEN_IDENTIFIER '=' expr

    TOKEN_DINT          shift, and go to state 2
    TOKEN_DFLOAT        shift, and go to state 3
    TOKEN_DDOUBLE       shift, and go to state 4
    TOKEN_DVOID         shift, and go to state 5
    TOKEN_STRING_CLASS  shift, and go to state 7
    TOKEN_DBOOLEAN      shift, and go to state 8
    TOKEN_DCHAR         shift, and go to state 9

    tipoPrimitivo  go to state 72


State 13

   59 sentencia_switch: TOKEN_SWITCH • '(' expr ')' '{' lista_casos '}'

    '('  shift, and go to state 73


State 14

   26 sentencia: TOKEN_BREAK •

    $default  reduce using rule 26 (sentencia)


State 15

   64 sentencia_while: TOKEN_WHILE • '(' expr ')' bloque

    '('  shift, and go to state 74


State 16

   27 sentencia: TOKEN_CONTINUE •

    $default  reduce using rule 27 (sentencia)


State 17

   65 sentencia_for: TOKEN_FOR • '(' declaracion_var ';' expr ';' asignacion ')' bloque
   66              | TOKEN_FOR • '(' declaracion_var ';' expr ';' ')' bloque
   67              | TOKEN_FOR • '(' ';' expr ';' asignacion ')' bloque
   68              | TOKEN_FOR • '(' ';' expr ';' ')' bloque
   69              | TOKEN_FOR • '(' tipoPrimitivo TOKEN_IDENTIFIER ':' expr ')' bloque

    '('  shift, and go to state 75


State 18

   33 bloque: '{' • lSentencia '}'

    TOKEN_PRINT         shift, and go to state 1
    TOKEN_DINT          shift, and go to state 2
    TOKEN_DFLOAT        shift, and go to state 3
    TOKEN_DDOUBLE       shift, and go to state 4
    TOKEN_DVOID         shift, and go to state 5
    TOKEN_IF            shift, and go to state 6
    TOKEN_STRING_CLASS  shift, and go to state 7
    TOKEN_DBOOLEAN      shift, and go to state 8
    TOKEN_DCHAR         shift, and go to state 9
    TOKEN_IDENTIFIER    shift, and go to state 10
    TOKEN_RETURN        shift, and go to state 11
    TOKEN_FINAL         shift, and go to state 12
    TOKEN_SWITCH        shift, and go to state 13
    TOKEN_BREAK         shift, and go to state 14
    TOKEN_WHILE         shift, and go to state 15
    TOKEN_CONTINUE      shift, and go to state 16
    TOKEN_FOR           shift, and go to state 17
    '{'                 shift, and go to state 18

    lSentencia          go to state 76
    sentencia           go to state 21
    imprimir            go to state 22
    bloque              go to state 23
    declaracion_var     go to state 24
    declaracion_const   go to state 25
    asignacion          go to state 26
    sentencia_if        go to state 27
    sentencia_funcion   go to state 28
    sentencia_switch    go to state 29
    sentencia_while     go to state 30
    sentencia_for       go to state 31
    tipoPrimitivo       go to state 32
    tipoArray           go to state 33
    declaracion_array   go to state 34
    tipoMatrix          go to state 35
    declaracion_matrix  go to state 36


State 19

    0 $accept: s • $end
    2 s: s • error ';'

    $end   shift, and go to state 77
    error  shift, and go to state 78


State 20

    1 s: lSentencia •
    3 lSentencia: lSentencia • sentencia ';'
    5           | lSentencia • bloque
    7           | lSentencia • sentencia_if
    9           | lSentencia • sentencia_switch
   11           | lSentencia • sentencia_while
   13           | lSentencia • sentencia_for
   15           | lSentencia • error ';'

    error               shift, and go to state 79
    TOKEN_PRINT         shift, and go to state 1
    TOKEN_DINT          shift, and go to state 2
    TOKEN_DFLOAT        shift, and go to state 3
    TOKEN_DDOUBLE       shift, and go to state 4
    TOKEN_DVOID         shift, and go to state 5
    TOKEN_IF            shift, and go to state 6
    TOKEN_STRING_CLASS  shift, and go to state 7
    TOKEN_DBOOLEAN      shift, and go to state 8
    TOKEN_DCHAR         shift, and go to state 9
    TOKEN_IDENTIFIER    shift, and go to state 10
    TOKEN_RETURN        shift, and go to state 11
    TOKEN_FINAL         shift, and go to state 12
    TOKEN_SWITCH        shift, and go to state 13
    TOKEN_BREAK         shift, and go to state 14
    TOKEN_WHILE         shift, and go to state 15
    TOKEN_CONTINUE      shift, and go to state 16
    TOKEN_FOR           shift, and go to state 17
    '{'                 shift, and go to state 18

    $end   reduce using rule 1 (s)
    error  [reduce using rule 1 (s)]

    sentencia           go to state 80
    imprimir            go to state 22
    bloque              go to state 81
    declaracion_var     go to state 24
    declaracion_const   go to state 25
    asignacion          go to state 26
    sentencia_if        go to state 82
    sentencia_funcion   go to state 28
    sentencia_switch    go to state 83
    sentencia_while     go to state 84
    sentencia_for       go to state 85
    tipoPrimitivo       go to state 32
    tipoArray           go to state 33
    declaracion_array   go to state 34
    tipoMatrix          go to state 35
    declaracion_matrix  go to state 36


State 21

    4 lSentencia: sentencia • ';'

    ';'  shift, and go to state 86


State 22

   16 sentencia: imprimir •

    $default  reduce using rule 16 (sentencia)


State 23

    6 lSentencia: bloque •
   17 sentencia: bloque •

    ';'       reduce using rule 17 (sentencia)
    $default  reduce using rule 6 (lSentencia)


State 24

   18 sentencia: declaracion_var •

    $default  reduce using rule 18 (sentencia)


State 25

   19 sentencia: declaracion_const •

    $default  reduce using rule 19 (sentencia)


State 26

   22 sentencia: asignacion •

    $default  reduce using rule 22 (sentencia)


State 27

    8 lSentencia: sentencia_if •

    $default  reduce using rule 8 (lSentencia)


State 28

   23 sentencia: sentencia_funcion •

    $default  reduce using rule 23 (sentencia)


State 29

   10 lSentencia: sentencia_switch •

    $default  reduce using rule 10 (lSentencia)


State 30

   12 lSentencia: sentencia_while •

    $default  reduce using rule 12 (lSentencia)


State 31

   14 lSentencia: sentencia_for •

    $default  reduce using rule 14 (lSentencia)


State 32

   34 declaracion_var: tipoPrimitivo • TOKEN_IDENTIFIER
   35                | tipoPrimitivo • TOKEN_IDENTIFIER '=' expr
   55 sentencia_funcion: tipoPrimitivo • TOKEN_FUNC TOKEN_IDENTIFIER '(' lista_parametros ')' bloque
   56                  | tipoPrimitivo • TOKEN_FUNC TOKEN_IDENTIFIER '(' ')' bloque
   57                  | tipoPrimitivo • TOKEN_IDENTIFIER '(' lista_parametros ')' bloque
   58                  | tipoPrimitivo • TOKEN_IDENTIFIER '(' ')' bloque
  122 tipoArray: tipoPrimitivo • '[' ']'
  128 tipoMatrix: tipoPrimitivo • '[' ']' '[' ']'

    TOKEN_FUNC        shift, and go to state 87
    TOKEN_IDENTIFIER  shift, and go to state 88
    '['               shift, and go to state 89


State 33

  123 declaracion_array: tipoArray • TOKEN_IDENTIFIER '=' TOKEN_NEW tipoPrimitivo '[' expr ']'
  124                  | tipoArray • TOKEN_IDENTIFIER '=' '{' lista_elementos '}'

    TOKEN_IDENTIFIER  shift, and go to state 90


State 34

   20 sentencia: declaracion_array •

    $default  reduce using rule 20 (sentencia)


State 35

  129 declaracion_matrix: tipoMatrix • TOKEN_IDENTIFIER '=' TOKEN_NEW tipoPrimitivo '[' expr ']' '[' expr ']'
  130                   | tipoMatrix • TOKEN_IDENTIFIER '=' '{' lista_filas '}'

    TOKEN_IDENTIFIER  shift, and go to state 91


State 36

   21 sentencia: declaracion_matrix •

    $default  reduce using rule 21 (sentencia)


State 37

   32 imprimir: TOKEN_PRINT '(' • lista_Expr ')'

    TOKEN_TRUE              shift, and go to state 52
    TOKEN_FALSE             shift, and go to state 53
    TOKEN_INTEGER           shift, and go to state 54
    TOKEN_DOUBLE_CLASS      shift, and go to state 55
    TOKEN_FLOAT_CLASS       shift, and go to state 56
    TOKEN_STRING_CLASS      shift, and go to state 57
    TOKEN_UNSIGNED_INTEGER  shift, and go to state 58
    TOKEN_REAL              shift, and go to state 59
    TOKEN_DOUBLE            shift, and go to state 60
    TOKEN_STRING            shift, and go to state 61
    TOKEN_CHAR              shift, and go to state 62
    TOKEN_IDENTIFIER        shift, and go to state 63
    '-'                     shift, and go to state 64
    '('                     shift, and go to state 65
    '~'                     shift, and go to state 66
    '!'                     shift, and go to state 67

    lista_Expr     go to state 92
    expr           go to state 93
    primitivo      go to state 69
    acceso_array   go to state 70
    acceso_matrix  go to state 71


State 38

   50 sentencia_if: TOKEN_IF '(' • expr ')' bloque
   51             | TOKEN_IF '(' • expr ')' bloque TOKEN_ELSE bloque
   52             | TOKEN_IF '(' • expr ')' bloque TOKEN_ELSE sentencia_if

    TOKEN_TRUE              shift, and go to state 52
    TOKEN_FALSE             shift, and go to state 53
    TOKEN_INTEGER           shift, and go to state 54
    TOKEN_DOUBLE_CLASS      shift, and go to state 55
    TOKEN_FLOAT_CLASS       shift, and go to state 56
    TOKEN_STRING_CLASS      shift, and go to state 57
    TOKEN_UNSIGNED_INTEGER  shift, and go to state 58
    TOKEN_REAL              shift, and go to state 59
    TOKEN_DOUBLE            shift, and go to state 60
    TOKEN_STRING            shift, and go to state 61
    TOKEN_CHAR              shift, and go to state 62
    TOKEN_IDENTIFIER        shift, and go to state 63
    '-'                     shift, and go to state 64
    '('                     shift, and go to state 65
    '~'                     shift, and go to state 66
    '!'                     shift, and go to state 67

    expr           go to state 94
    primitivo      go to state 69
    acceso_array   go to state 70
    acceso_matrix  go to state 71


State 39

   40 asignacion: TOKEN_IDENTIFIER TOKEN_PLUS_ASSIGN • expr

    TOKEN_TRUE              shift, and go to state 52
    TOKEN_FALSE             shift, and go to state 53
    TOKEN_INTEGER           shift, and go to state 54
    TOKEN_DOUBLE_CLASS      shift, and go to state 55
    TOKEN_FLOAT_CLASS       shift, and go to state 56
    TOKEN_STRING_CLASS      shift, and go to state 57
    TOKEN_UNSIGNED_INTEGER  shift, and go to state 58
    TOKEN_REAL              shift, and go to state 59
    TOKEN_DOUBLE            shift, and go to state 60
    TOKEN_STRING            shift, and go to state 61
    TOKEN_CHAR              shift, and go to state 62
    TOKEN_IDENTIFIER        shift, and go to state 63
    '-'                     shift, and go to state 64
    '('                     shift, and go to state 65
    '~'                     shift, and go to state 66
    '!'                     shift, and go to state 67

    expr           go to state 95
    primitivo      go to state 69
    acceso_array   go to state 70
    acceso_matrix  go to state 71


State 40

   41 asignacion: TOKEN_IDENTIFIER TOKEN_MINUS_ASSIGN • expr

    TOKEN_TRUE              shift, and go to state 52
    TOKEN_FALSE             shift, and go to state 53
    TOKEN_INTEGER           shift, and go to state 54
    TOKEN_DOUBLE_CLASS      shift, and go to state 55
    TOKEN_FLOAT_CLASS       shift, and go to state 56
    TOKEN_STRING_CLASS      shift, and go to state 57
    TOKEN_UNSIGNED_INTEGER  shift, and go to state 58
    TOKEN_REAL              shift, and go to state 59
    TOKEN_DOUBLE            shift, and go to state 60
    TOKEN_STRING            shift, and go to state 61
    TOKEN_CHAR              shift, and go to state 62
    TOKEN_IDENTIFIER        shift, and go to state 63
    '-'                     shift, and go to state 64
    '('                     shift, and go to state 65
    '~'                     shift, and go to state 66
    '!'                     shift, and go to state 67

    expr           go to state 96
    primitivo      go to state 69
    acceso_array   go to state 70
    acceso_matrix  go to state 71


State 41

   42 asignacion: TOKEN_IDENTIFIER TOKEN_MULT_ASSIGN • expr
